# aws-bedrock-streamlit

./: README.md  main.py  pyproject.toml
utils/: __init__.py  credential.py
